msdosfs: long names of files are created incorrectly.

This fixes a regression that happened in r120492 (2003) where libkiconv
was introduced and we went from checking unlen to checking for '\0'.

PR:		111843
Patch by:	Damjan Jovanovic
MFC after:	1 week


git-svn-id: svn+ssh://svn.freebsd.org/base/head@333239 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f